--- a/app/src/main/res/layout/item_storage_config.xml
+++ b/app/src/main/res/layout/item_storage_config.xml
@@ -47,6 +47,7 @@
 		android:background="?selectableItemBackgroundBorderless"
 		android:contentDescription="@string/remove"
 		android:padding="?listPreferredItemPaddingEnd"
+		android:tooltipText="@string/remove"
 		app:srcCompat="@drawable/ic_delete" />
 
 </LinearLayout>
