--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -61,6 +61,7 @@
 		android:layout_height="16dp"
 		android:layout_marginEnd="4dp"
 		android:contentDescription="@string/check_for_new_chapters"
+		android:tooltipText="@string/check_for_new_chapters"
 		app:layout_constraintBottom_toBottomOf="@id/textView_subtitle"
 		app:layout_constraintEnd_toStartOf="@id/imageView_hidden"
 		app:layout_constraintStart_toEndOf="@id/textView_subtitle"
@@ -71,7 +72,8 @@
 		android:id="@+id/imageView_hidden"
 		android:layout_width="16dp"
 		android:layout_height="16dp"
-		android:contentDescription="@string/show_on_shelf"
+		android:contentDescription="@string/hide_from_main_screen"
+		android:tooltipText="@string/hide_from_main_screen"
 		app:layout_constraintBottom_toBottomOf="@id/textView_subtitle"
 		app:layout_constraintEnd_toEndOf="@id/textView_title"
 		app:layout_constraintStart_toEndOf="@id/imageView_tracker"
