--- a/app/src/main/res/layout/item_download.xml
+++ b/app/src/main/res/layout/item_download.xml
@@ -45,9 +45,12 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="?selectableItemBackgroundBorderless"
+			android:contentDescription="@string/details"
 			android:minWidth="?minTouchTargetSize"
 			android:minHeight="?minTouchTargetSize"
+			android:pointerIcon="hand"
 			android:scaleType="center"
+			android:tooltipText="@string/details"
 			android:visibility="gone"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
