--- a/app/src/main/res/layout/item_source_catalog.xml
+++ b/app/src/main/res/layout/item_source_catalog.xml
@@ -61,7 +61,7 @@
 		android:layout_marginVertical="@dimen/margin_small"
 		android:background="?colorOutline" />
 
-	<ImageView
+	<ImageButton
 		android:id="@+id/imageView_add"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
