--- a/app/src/main/res/layout/layout_details_table.xml
+++ b/app/src/main/res/layout/layout_details_table.xml
@@ -38,6 +38,7 @@
 		android:background="@drawable/custom_selectable_item_background"
 		android:drawablePadding="4dp"
 		android:padding="4dp"
+		android:pointerIcon="hand"
 		android:singleLine="true"
 		android:textAppearance="?textAppearanceBodyMedium"
 		app:layout_constrainedWidth="true"
