Fix color filte activity strings

--- a/app/src/main/res/layout-w600dp-land/activity_color_filter.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_color_filter.xml
@@ -134,7 +134,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/margin_normal"
 				android:layout_marginTop="4dp"
-				android:text="@string/invert_colors"
+				android:text="@string/grayscale"
 				android:textAppearance="?textAppearanceTitleMedium"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toEndOf="@id/guideline_vertical"
