Show changelog in settings

--- a/app/src/main/res/xml/pref_about.xml
+++ b/app/src/main/res/xml/pref_about.xml
@@ -16,6 +16,13 @@
 		android:title="@string/allow_unstable_updates" />
 
 	<Preference
+		android:fragment="org.koitharu.kotatsu.settings.about.changelog.ChangelogFragment"
+		android:key="changelog"
+		android:persistent="false"
+		android:summary="@string/changelog_summary"
+		android:title="@string/changelog" />
+
+	<Preference
 		android:key="about_help"
 		android:persistent="false"
 		android:summary="@string/url_user_manual"
