--- a/app/src/main/res/layout-w600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_main.xml
@@ -66,7 +66,8 @@
 					android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical|end"
 					android:hint="@string/search_manga"
-					app:adaptiveMaxWidthEnabled="true" />
+					app:adaptiveMaxWidthEnabled="true"
+					app:forceDefaultNavigationOnClickListener="true" />
 
 			</FrameLayout>
 
