--- a/app/src/main/res/xml/pref_source_parser.xml
+++ b/app/src/main/res/xml/pref_source_parser.xml
@@ -4,6 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<Preference
+		android:enabled="false"
 		android:key="auth"
 		android:order="100"
 		android:persistent="false"
