--- a/app/src/main/res/layout/item_search_suggestion_tags.xml
+++ b/app/src/main/res/layout/item_search_suggestion_tags.xml
@@ -14,6 +14,7 @@
 		android:id="@+id/chips_genres"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:clipChildren="false"
 		android:paddingTop="6dp"
 		android:paddingBottom="12dp"
 		app:singleLine="true" />
