--- a/app/src/main/res/layout/navigation_rail_fab.xml
+++ b/app/src/main/res/layout/navigation_rail_fab.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.floatingactionbutton.FloatingActionButton
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/railFab"
-	android:layout_width="wrap_content"
+	android:id="@+id/cat_navigation_rail_efab_container"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:contentDescription="@string/_continue"
-	app:srcCompat="@drawable/ic_read" />
+	android:layout_gravity="top|start"
+	android:clipChildren="false"
+	android:clipToPadding="false"
+	android:orientation="vertical">
+
+	<ImageButton
+		android:id="@+id/button_expand"
+		android:layout_width="56dp"
+		android:layout_height="56dp"
+		android:background="?selectableItemBackgroundBorderless"
+		android:contentDescription="@string/expand"
+		android:scaleType="center"
+		android:src="@drawable/ic_drawer_menu" />
+
+	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+		android:id="@+id/railFab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/_continue"
+		app:icon="@drawable/ic_read" />
+
+</LinearLayout>
