--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,6 +10,7 @@
 		<item name="android:colorBackground">@color/background_amoled</item>
 		<item name="android:windowBackground">@color/background_amoled</item>
 		<item name="colorBackgroundFloating">@color/background_amoled</item>
+		<item name="colorSurfaceContainerHigh">@color/background_amoled</item>
 	</style>
 
 	<!-- Monet theme only support S+ -->
