Fix Read split button #1417

--- a/app/src/main/res/layout/item_download.xml
+++ b/app/src/main/res/layout/item_download.xml
@@ -52,7 +52,7 @@
 			android:visibility="gone"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
-			app:srcCompat="@drawable/m3_split_button_chevron_avd"
+			app:srcCompat="?expandCollapseIndicator"
 			app:tint="?colorControlActivated"
 			tools:visibility="visible" />
 
