Fix search suggestions on landscape

--- a/app/src/main/res/layout-w600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_main.xml
@@ -86,7 +86,7 @@
 
 		<com.google.android.material.search.SearchView
 			android:id="@+id/search_view"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_gravity="end"
 			android:hint="@string/search_hint"
